# 8086emu

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: compileWarnings.cmake  gtest.cmake
src/: 8086_text.cpp  8086_text.h  8086emu.cpp  decoder.cpp  decoder.h  instruction-table.cpp  instruction-table.hpp  instruction.cpp  instruction.hpp  memory.hpp  simulator.cpp  simulator.hpp
test/: CMakeLists.txt
test/res/: add  add.asm  listing_0040_challenge_movs_copy.asm  listing_0041_add_sub_cmp_jnz_copy  listing_0041_add_sub_cmp_jnz_copy.asm  listing_0042_completionist_decode  listing_0042_completionist_decode.asm
test/src/: test_decoder.cpp  test_nasm_decoder.cpp  test_nasm_simulator.cpp
